// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`breadcrumb component snapshot > should hide root label when hideRootLabel is true 1`] = `
<DocumentFragment>
  <nav
    class=""
    data-ods="breadcrumb"
    id=":r1:"
    role="navigation"
  >
    <ol
      class="_breadcrumb__list_1jn0o_2"
    />
  </nav>
</DocumentFragment>
`;

exports[`breadcrumb component snapshot > should render 3 breadcrumb items when hideRootLabel is false 1`] = `
<DocumentFragment>
  <nav
    class=""
    data-ods="breadcrumb"
    id=":r0:"
    role="navigation"
  >
    <ol
      class="_breadcrumb__list_1jn0o_2"
    >
      <li
        class="_breadcrumb-item_1bnix_2"
        data-ods="breadcrumb-item"
        role="listitem"
      >
        <span
          aria-current="page"
          data-ods="breadcrumb-link"
          href="/"
        >
          vRack services
        </span>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;
